--- a/public/scss/structure.scss
+++ b/public/scss/structure.scss
@@ -20,3 +20,56 @@ p {
 }
 
 // ====FONTS======//
+
+// ========fonts======//
+
+// CAVEAT
+
+@font-face {
+	font-family: Caveat Bold;
+	src: url(../css/fonts/Caveat-Bold.ttf);
+}
+
+@font-face {
+	font-family: Caveat Regular;
+	src: url(../css/fonts/Caveat-Regular.ttf);
+}
+
+// LATO
+
+@font-face {
+	font-family: LatoBlack;
+	src: url(../css/fonts/Lato-Black.ttf);
+}
+
+@font-face {
+	font-family: LatoItalic;
+	src: url(../css/fonts/Lato-Italic.ttf);
+}
+
+@font-face {
+	font-family: LatoLight;
+	src: url(../css/fonts/Lato-Light.ttf);
+}
+
+@font-face {
+	font-family: LatoRegular;
+	src: url(../css/fonts/Lato-Regular.ttf);
+}
+
+// GILL SANS
+
+@font-face {
+	font-family: GillSans Italic;
+	src: url(../css/fonts/GillSansItalic.ttf);
+}
+
+@font-face {
+	font-family: GillSans-Light;
+	src: url(../css/fonts/GillSans-Light.ttf);
+}
+
+@font-face {
+	font-family: GillSans;
+	src: url(../css/fonts/GillSans.ttf);
+}
