--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -1,4 +1,5 @@
 nav {
+	width: 100vw;
 	position: absolute;
 	display: flex;
 	align-items: center;
@@ -15,6 +16,7 @@ nav {
 		background-repeat: no-repeat;
 	}
 	.nav-holder {
+		position: relative;
 		width: 500px;
 		margin: 52px;
 		display: flex;
