--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,13 +74,13 @@ nav .logo {
 }
 nav .nav-holder {
   position: relative;
-  width: 500px;
+  width: 700px;
   margin: 52px;
   display: flex;
   justify-content: space-between;
 }
 nav .nav-holder .links {
-  width: 500px;
+  width: 600px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -90,6 +90,11 @@ nav .nav-holder .links a {
   font-size: 25px;
   color: #000;
   text-decoration: none;
+  letter-spacing: 2.5px;
+}
+nav .nav-holder .links .active {
+  width: 54px;
+  border-bottom: 3px #000 solid;
 }
 nav .nav-holder button {
   width: 168px;
@@ -207,4 +212,13 @@ footer .socials .insta {
   text-align: center;
   letter-spacing: 1px;
   line-height: 12px;
+}
+
+.browse-content .browse-hero {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(to right, rgba(167, 232, 189, 0.8), rgba(167, 232, 189, 0.8)), url(../images/recipe-hero.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
