--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -17,12 +17,12 @@ nav {
 	}
 	.nav-holder {
 		position: relative;
-		width: 500px;
+		width: 700px;
 		margin: 52px;
 		display: flex;
 		justify-content: space-between;
 		.links {
-			width: 500px;
+			width: 600px;
 			display: flex;
 			justify-content: space-evenly;
 			align-items: center;
@@ -32,6 +32,11 @@ nav {
 				font-size: 25px;
 				color: #000;
 				text-decoration: none;
+				letter-spacing: 2.5px;
+			}
+			.active {
+				width: 54px;
+				border-bottom: 3px #000 solid;
 			}
 		}
 		button {
