--- a/public/scss/browse.scss
+++ b/public/scss/browse.scss
@@ -12,6 +12,12 @@
 		// justify-content: center;
 
 		.recipes-container {
+			width: 1100px;
+			.recipe-box {
+				width: 524px;
+				height: 263px;
+				background-color: hotpink;
+			}
 		}
 	}
 }
