--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -221,12 +221,15 @@ footer .socials .insta {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  display: flex;
 }
-.browse-content .browse-hero .recipes-container {
+.browse-content .browse-hero .recipe-container {
   width: 1100px;
-}
-.browse-content .browse-hero .recipes-container .recipe-box {
-  width: 524px;
-  height: 263px;
+  min-height: 200px;
+  margin: 300px auto;
   background-color: hotpink;
+}
+.browse-content .browse-hero h1 {
+  font-family: Caveat Bold;
+  font-size: 25px;
 }
