--- a/public/scss/browse.scss
+++ b/public/scss/browse.scss
@@ -7,17 +7,29 @@
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
-		// display: flex;
+		display: flex;
+
+		.recipe-container {
+			width: 1100px;
+			min-height: 200px;
+			margin: 300px auto;
+			background-color: hotpink;
+		}
+		h1 {
+			font-family: $font1;
+			font-size: 25px;
+		}
+
 		// align-items: center;
 		// justify-content: center;
 
-		.recipes-container {
-			width: 1100px;
-			.recipe-box {
-				width: 524px;
-				height: 263px;
-				background-color: hotpink;
-			}
-		}
+		// .recipes-container {
+		// 	width: 1100px;
+		// 	.recipe-box {
+		// 		width: 524px;
+		// 		height: 263px;
+		// 		background-color: hotpink;
+		// 	}
+		// }
 	}
 }
