--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,6 +104,7 @@ nav .nav-holder button {
   font-family: Caveat Regular;
   font-size: 25px;
   border: none;
+  box-shadow: 0px 10px 6px #00000029;
 }
 
 footer {
@@ -313,4 +314,51 @@ footer .socials .insta {
   width: 46px;
   font-family: LatoRegular;
   font-size: 10px;
+}
+
+.login-content {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  background-color: #ffd972;
+}
+.login-content .login-create-container {
+  width: 710px;
+  height: 455px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+.login-content .login-box {
+  width: 210px;
+  height: 280px;
+  margin-top: 100px;
+  display: block;
+}
+.login-content .login-box h1 {
+  font-family: LatoBlack;
+  font-size: 30px;
+  margin-bottom: 61px;
+}
+.login-content .login-box input {
+  width: 209px;
+  border: none;
+  margin-bottom: 51px;
+  border-bottom: 3px solid #000;
+  background-color: #ffd972;
+}
+.login-content .create-box {
+  width: 250px;
+  height: 450px;
+  background-color: purple;
+}
+
+button {
+  width: 209px;
+  height: 52px;
+  border-radius: 26px;
+  background-color: #ffd972;
+  border: none;
+  box-shadow: 0px 10px 6px #00000029;
 }
