--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -351,7 +351,23 @@ footer .socials .insta {
 .login-content .create-box {
   width: 250px;
   height: 450px;
-  background-color: purple;
+}
+.login-content .create-box h1 {
+  font-family: LatoBlack;
+  font-size: 30px;
+  margin-bottom: 61px;
+  letter-spacing: 1.2px;
+}
+.login-content .create-account {
+  font-family: LatoItalic;
+  font-size: 12px;
+}
+.login-content input {
+  width: 209px;
+  border: none;
+  margin-bottom: 51px;
+  border-bottom: 3px solid #000;
+  background-color: #ffd972;
 }
 
 button {
@@ -361,4 +377,6 @@ button {
   background-color: #ffd972;
   border: none;
   box-shadow: 0px 10px 6px #00000029;
+  font-family: Caveat Regular;
+  font-size: 25px;
 }
