--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -37,7 +37,24 @@
 	.create-box {
 		width: 250px;
 		height: 450px;
-		background-color: purple;
+
+		h1 {
+			font-family: $font3;
+			font-size: 30px;
+			margin-bottom: 61px;
+			letter-spacing: 1.2px;
+		}
+	}
+	.create-account {
+		font-family: $font4;
+		font-size: 12px;
+	}
+	input {
+		width: 209px;
+		border: none;
+		margin-bottom: 51px;
+		border-bottom: 3px solid #000;
+		background-color: #ffd972;
 	}
 }
 
@@ -48,4 +65,6 @@ button {
 	background-color: #ffd972;
 	border: none;
 	box-shadow: 0px 10px 6px #00000029;
+	font-family: $font2;
+	font-size: 25px;
 }
