--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -394,15 +394,60 @@ button {
 .create-content .field-container h1 {
   font-family: Caveat Bold;
   font-size: 25px;
+  margin-bottom: 50px;
   padding-top: 200px;
 }
 .create-content .field-container h3 {
+  height: 30px;
   font-family: LatoBlack;
   font-size: 20px;
+  margin-bottom: 20px;
+}
+.create-content .field-container .input-holder {
+  position: absolute;
 }
 .create-content .field-container input {
   width: 981px;
+  height: 40px;
   border: none;
   margin-bottom: 100px;
   border-bottom: 3px solid #000;
+}
+.create-content .field-container .attach {
+  width: 110px;
+  height: 36px;
+  position: relative;
+  right: 110px;
+  background-color: #efa7a7;
+}
+.create-content .add {
+  width: 38px;
+  height: 38px;
+  position: relative;
+  top: -145px;
+  left: 940px;
+  background-color: #efa7a7;
+  box-shadow: none;
+  display: flex;
+  justify-content: center;
+}
+.create-content .add span {
+  width: 13px;
+  height: 23px;
+  margin-right: 3px;
+}
+.create-content ::placeholder {
+  font-family: LatoLight;
+  font-size: 20px;
+  color: #000;
+}
+.create-content .create-button {
+  width: 422px;
+  height: 52px;
+  border-radius: 26px;
+  background-color: #efa7a7;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  margin-bottom: 60px;
+  margin-left: 275px;
 }
