--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -34,6 +34,10 @@ nav {
 				text-decoration: none;
 				letter-spacing: 2.5px;
 			}
+
+			.your {
+				// display: none;
+			}
 			.active {
 				width: 54px;
 				border-bottom: 3px #000 solid;
