--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -451,3 +451,95 @@ button {
   margin-bottom: 60px;
   margin-left: 275px;
 }
+
+.your-content .your-hero {
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(to right, rgba(167, 232, 189, 0.8), rgba(167, 232, 189, 0.8)), url(../images/recipe-hero.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+}
+.your-content .your-hero .your-container {
+  width: 1100px;
+  min-height: 200px;
+  margin: 220px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.your-content .your-hero h1 {
+  width: 100%;
+  font-family: Caveat Bold;
+  font-size: 25px;
+}
+.your-content .your-hero .your-box {
+  width: 524px;
+  height: 263px;
+  margin-bottom: 50px;
+  display: flex;
+}
+.your-content .your-hero .your-box .your-image {
+  width: 300px;
+  height: 263px;
+  border-radius: 24px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.your-content .your-hero .your-box .pizza {
+  background-image: url(../images/recipe-pizza.jpg);
+}
+.your-content .your-hero .your-box .your-description {
+  width: 224px;
+  height: 263px;
+  border-radius: 24px;
+  background-color: #ffffff;
+}
+.your-content .your-hero .your-box .your-description .your-title {
+  width: 140px;
+  border-bottom: 3px solid;
+  margin: 46px auto 21px auto;
+  font-family: LatoBlack;
+  font-size: 15px;
+  letter-spacing: 1.5px;
+}
+.your-content .your-hero .your-box .your-description .your-text {
+  width: 150px;
+  min-height: 100px;
+  margin: 0 auto;
+  letter-spacing: 0.9px;
+  line-height: 11px;
+  font-family: LatoRegular;
+  font-size: 9px;
+}
+.your-content .your-hero .your-box .your-description .recipe-stats {
+  width: 84px;
+  margin: 0 auto 10px auto;
+  display: flex;
+  justify-content: space-between;
+}
+.your-content .your-hero .your-box .your-description .icon {
+  width: 23px;
+  height: 25px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.your-content .your-hero .your-box .your-description .timer {
+  background-image: url(../images/icons/time.svg);
+}
+.your-content .your-hero .your-box .your-description .meal {
+  background-image: url(../images/icons/servings.svg);
+}
+.your-content .your-hero .your-box .your-description .time {
+  width: 46px;
+  font-family: LatoRegular;
+  font-size: 10px;
+}
+.your-content .your-hero .your-box .your-description .servings {
+  width: 46px;
+  font-family: LatoRegular;
+  font-size: 10px;
+}
