--- a/public/scss/your.scss
+++ b/public/scss/your.scss
@@ -25,7 +25,7 @@
 
 		.your-box {
 			width: 524px;
-			height: 263px;
+			min-height: 263px;
 			margin-bottom: 50px;
 			display: flex;
 
@@ -36,23 +36,19 @@
 				background-position: center;
 				background-size: cover;
 				background-repeat: no-repeat;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+			}
+
+			.view {
+				width: 128px;
+				height: 42px;
 			}
 
 			.pizza {
 				background-image: url(../images/recipe-pizza.jpg);
 			}
-
-			// .burger {
-			// 	background-image: url(../images/recipe-burger.jpg);
-			// }
-
-			// .pilaf {
-			// 	background-image: url(../images/recipe-pilaf.jpg);
-			// }
-
-			// .chowmein {
-			// 	background-image: url(../images/recipe-chowmein.jpg);
-			// }
 
 			.your-description {
 				width: 224px;
@@ -105,6 +101,25 @@
 					width: 46px;
 					font-family: $font6;
 					font-size: 10px;
+				}
+			}
+
+			.edit-delete-container {
+				position: absolute;
+				width: 300px;
+				height: 42px;
+				top: 650px;
+				display: flex;
+				justify-content: space-around;
+				font-family: $font2;
+				font-size: 20px;
+				.edit {
+					width: 128px;
+					height: 42px;
+				}
+				.delete {
+					width: 128px;
+					height: 42px;
 				}
 			}
 		}
