--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -658,3 +658,74 @@ button {
   margin-top: 60px;
   margin-bottom: 120px;
 }
+
+.editrecipe-content {
+  width: 100vw;
+  display: flex;
+}
+.editrecipe-content .field-container {
+  width: 980px;
+  min-height: 200px;
+  margin: 0 auto;
+  padding-bottom: 100px;
+}
+.editrecipe-content .field-container h1 {
+  font-family: Caveat Bold;
+  font-size: 25px;
+  margin-bottom: 50px;
+  padding-top: 200px;
+}
+.editrecipe-content .field-container h3 {
+  height: 30px;
+  font-family: LatoBlack;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.editrecipe-content .field-container .input-holder {
+  position: absolute;
+}
+.editrecipe-content .field-container input {
+  width: 981px;
+  height: 40px;
+  border: none;
+  margin-bottom: 100px;
+  border-bottom: 3px solid #000;
+}
+.editrecipe-content .field-container .attach {
+  width: 110px;
+  height: 36px;
+  position: relative;
+  right: 110px;
+  background-color: #efa7a7;
+}
+.editrecipe-content .add {
+  width: 38px;
+  height: 38px;
+  position: relative;
+  top: -145px;
+  left: 940px;
+  background-color: #efa7a7;
+  box-shadow: none;
+  display: flex;
+  justify-content: center;
+}
+.editrecipe-content .add span {
+  width: 13px;
+  height: 23px;
+  margin-right: 3px;
+}
+.editrecipe-content ::placeholder {
+  font-family: LatoLight;
+  font-size: 20px;
+  color: #000;
+}
+.editrecipe-content .submit-button {
+  width: 422px;
+  height: 52px;
+  border-radius: 26px;
+  background-color: #efa7a7;
+  font-family: Caveat Regular;
+  font-size: 25px;
+  margin-bottom: 60px;
+  margin-left: 275px;
+}
