--- a/public/scss/browse.scss
+++ b/public/scss/browse.scss
@@ -1,7 +1,8 @@
 .browse-content {
 	.browse-hero {
 		width: 100vw;
-		height: 100vh;
+		height: 100%;
+		// padding-bottom: 50px;
 		background-image: linear-gradient(to right, rgba(167, 232, 189, .8), rgba(167, 232, 189, .8)),
 			url(../images/recipe-hero.jpg);
 		background-position: center;
