--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -4,7 +4,7 @@ nav {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	z-index: 99;
+	// z-index: 99;
 
 	.logo {
 		width: 168px;
@@ -16,17 +16,53 @@ nav {
 		background-repeat: no-repeat;
 	}
 	.nav-holder {
-		position: relative;
-		width: 700px;
-		margin: 52px;
+		// width: 100vw;
+		// height: 100vh;
+		// height: 100vh;
+		// left: 300px;
 		display: flex;
+		top: 10px;
 		justify-content: space-between;
+		z-index: 99;
+
+		.bars {
+			position: absolute;
+			display: none;
+			right: 10px;
+			top: -40px;
+		}
+
+		.bars .bar {
+			display: block;
+			width: 25px;
+			margin: 5px 0;
+			background-color: #000;
+			height: 3px;
+			border-radius: 5px;
+			transition: all .3s ease-in-out;
+		}
+
+		.bars.active .bar:nth-child(2) {
+			opacity: 0;
+		}
+		.bars.active .bar:nth-child(1) {
+			transform: translateY(8px) rotate(45deg);
+		}
+		.bars.active .bar:nth-child(3) {
+			transform: translateY(-8px) rotate(-45deg);
+		}
+
 		.links {
 			width: 600px;
 			display: flex;
+			height: 70px;
+			// width: 100vw;
+			margin-left: -10px;
+			overflow: hidden;
 			justify-content: space-evenly;
 			align-items: center;
-
+			transition: height .4s, opacity .4s ease-in;
+			background-color: teal;
 			a {
 				font-family: $font2;
 				font-size: 25px;
@@ -35,23 +71,74 @@ nav {
 				letter-spacing: 2.5px;
 			}
 
+			.links.active {
+				height: 60vh;
+				opacity: 1;
+				background-color: hotpink;
+			}
+
 			.your {
-				// display: none;
+				display: none;
 			}
 			.active {
 				width: 54px;
-				border-bottom: 3px #000 solid;
+				// border-bottom: 3px #000 solid;
 			}
 		}
-		button {
-			width: 168px;
-			height: 55px;
-			border-radius: 26px;
-			background-color: #ffd972;
-			font-family: $font2;
-			font-size: 25px;
-			border: none;
-			box-shadow: 0px 10px 6px #00000029;
+	}
+	button {
+		width: 168px;
+		height: 55px;
+		border-radius: 26px;
+		background-color: #ffd972;
+		font-family: $font2;
+		font-size: 25px;
+		border: none;
+		box-shadow: 0px 10px 6px #00000029;
+	}
+}
+
+// =====RESPONSIVENESS====//
+@media only screen and (max-width: 960px) {
+	nav {
+		// height: 100px;
+		// width: 100vw;
+		display: flex;
+		z-index: 99;
+		.nav-holder {
+			position: absolute;
+			height: 50vh;
+			top: 55px;
+			// left: 100px;
+			right: 10px;
+			width: 100vw;
+			background-color: red;
+			// z-index: 99;
+
+			.bars {
+				display: block;
+				z-index: 99;
+			}
+			.links {
+				width: 100vw;
+				height: 50vh;
+				opacity: 0;
+				margin-left: -10px;
+				flex-direction: column;
+				transition: height .4s, opacity .4s ease-in;
+				background-color: chartreuse;
+			}
 		}
 	}
 }
+
+// @media only screen and (max-width: 768px) {
+// 	nav {
+// 		height: 100vh;
+// 		width: 70vw;
+// 		.logo {
+// 			width: 136px;
+// 			height: 47px;
+// 		}
+// 	}
+// }
