--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,9 +144,12 @@ nav button {
     display: flex;
     z-index: 99;
   }
+  nav .logo {
+    margin-top: 10px;
+  }
   nav .nav-holder {
     position: absolute;
-    height: 50vh;
+    height: 60vh;
     top: 55px;
     right: 10px;
     width: 100vw;
@@ -158,6 +161,7 @@ nav button {
   nav .nav-holder .links {
     width: 100vw;
     height: 50vh;
+    margin-top: 20px;
     opacity: 0;
     flex-direction: column;
     transition: height 0.4s, opacity 0.4s ease-in;
