--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -1,6 +1,6 @@
 footer {
 	// position: absolute;
-	height: 60px;
+	min-height: 60px;
 	margin-top: -70px;
 	padding-bottom: 24px;
 	font-family: $font4;
@@ -10,17 +10,21 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	z-index: 99;
-
-	.copyright {
-		width: 266px;
-		height: 18px;
-		margin-left: 40px;
-	}
-	.misc {
-		width: 645px;
+	.footer-container {
 		display: flex;
-		align-items: center;
 		justify-content: space-between;
+		width: 1100px;
+		.copyright {
+			width: 266px;
+			height: 18px;
+			margin-left: 40px;
+		}
+		.misc {
+			width: 645px;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+		}
 	}
 	.socials {
 		width: 78px;
@@ -40,6 +44,44 @@ footer {
 			width: 19px;
 			height: 19px;
 			background-image: url(../images/socials/insta.png);
+		}
+	}
+}
+
+// ===RESPONSIVENESS=====//
+@media only screen and (max-width: 960px) {
+	footer {
+		font-size: 10px;
+		display: flex;
+		margin-left: 20px;
+		.footer-container {
+			width: 300px;
+			margin-bottom: 50px;
+			margin-left: 30px;
+			min-height: 50px;
+			display: block;
+
+			.copyright {
+				margin-left: 0;
+				margin-bottom: 10px;
+			}
+			.misc {
+				display: flex;
+				justify-content: space-evenly;
+				min-height: 20px;
+				width: 400px;
+				flex-wrap: wrap;
+				padding-left: 80px;
+				padding-right: 80px;
+				line-height: 20px;
+			}
+		}
+		.socials {
+			width: 50px;
+			margin-left: 30px;
+			margin-bottom: 100px;
+			display: flex;
+			justify-content: space-between;
 		}
 	}
 }
