--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -49,7 +49,38 @@ footer {
 }
 
 // ===RESPONSIVENESS=====//
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1240px) {
+	footer {
+		.footer-container {
+			min-height: 20px;
+			.misc {
+				width: 600px;
+				min-height: 5px;
+				margin-right: 30px;
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 1100px) {
+	footer {
+		.footer-container {
+			min-height: 20px;
+			.misc {
+				width: 450px;
+				padding-right: 30px;
+				min-height: 5px;
+				margin-right: 30px;
+				display: flex;
+				flex-wrap: wrap;
+			}
+		}
+	}
+}
+
+@media only screen and (max-width: 768px) {
 	footer {
 		font-size: 10px;
 		display: flex;
@@ -84,4 +115,7 @@ footer {
 			justify-content: space-between;
 		}
 	}
+}
+
+@media only screen and (max-width: 960px) {
 }
