--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -1,10 +1,11 @@
 nav {
 	width: 100vw;
+	height: 100px;
 	position: absolute;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	// z-index: 99;
+	z-index: 99;
 
 	.logo {
 		width: 168px;
@@ -15,15 +16,15 @@ nav {
 		background-size: cover;
 		background-repeat: no-repeat;
 	}
+
 	.nav-holder {
-		// width: 100vw;
+		width: 600px;
 		// height: 100vh;
 		// height: 100vh;
 		// left: 300px;
 		display: flex;
 		top: 10px;
 		justify-content: space-between;
-		z-index: 99;
 
 		.bars {
 			position: absolute;
@@ -62,17 +63,21 @@ nav {
 			justify-content: space-evenly;
 			align-items: center;
 			transition: height .4s, opacity .4s ease-in;
-		}
-		a {
-			font-family: $font2;
-			font-size: 25px;
-			color: #000;
-			text-decoration: none;
-			letter-spacing: 2.5px;
+			z-index: 99;
+
+			a {
+				font-family: $font2;
+				font-size: 25px;
+				color: #000;
+				text-decoration: none;
+				letter-spacing: 2.5px;
+			}
 		}
 
 		.links.active {
-			height: 60vh;
+			width: 600px;
+			// width: 600px;
+			// padding-left: 100px;
 			opacity: 1;
 		}
 
@@ -81,6 +86,7 @@ nav {
 		}
 		.active {
 			width: 54px;
+
 			// border-bottom: 3px #000 solid;
 		}
 	}
@@ -101,19 +107,19 @@ nav {
 	nav {
 		// height: 100px;
 		// width: 100vw;
-		display: flex;
-		z-index: 99;
+		// display: flex;
+		// z-index: 99;
 		.logo {
 			margin-top: 10px;
 		}
 		.nav-holder {
 			position: absolute;
-			height: 60vh;
+			// height: 100vh;
 			top: 55px;
 			// left: 100px;
 			right: 10px;
 			width: 100vw;
-			// z-index: 99;
+			z-index: 99;
 
 			.bars {
 				display: block;
@@ -122,8 +128,9 @@ nav {
 			.links {
 				width: 100vw;
 				height: 50vh;
-				margin-top: 20px;
+				margin-top: 40px;
 				opacity: 0;
+				right: 10px;
 				flex-direction: column;
 				transition: height .4s, opacity .4s ease-in;
 				background-color: rgba(242, 92, 84, 1);
@@ -131,14 +138,3 @@ nav {
 		}
 	}
 }
-
-// @media only screen and (max-width: 768px) {
-// 	nav {
-// 		height: 100vh;
-// 		width: 70vw;
-// 		.logo {
-// 			width: 136px;
-// 			height: 47px;
-// 		}
-// 	}
-// }
