--- a/public/scss/footer.scss
+++ b/public/scss/footer.scss
@@ -10,6 +10,7 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	z-index: 99;
+	margin-bottom: 50px;
 	.footer-container {
 		display: flex;
 		justify-content: space-between;
