--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -7,7 +7,7 @@
 
 	.login-create-container {
 		width: 710px;
-		height: 455px;
+		min-height: 455px;
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
@@ -67,4 +67,24 @@ button {
 	box-shadow: 0px 10px 6px #00000029;
 	font-family: $font2;
 	font-size: 25px;
+}
+
+// ======RESPONSIVENESS=======//
+@media only screen and (max-width: 768px) {
+	.login-content {
+		height: 100%;
+		.login-create-container {
+			width: 207px;
+			display: flex;
+			flex-wrap: wrap;
+			margin-top: 50px;
+
+			.login-box {
+				margin-bottom: 150px;
+			}
+			.create-box {
+				margin-bottom: 200px;
+			}
+		}
+	}
 }
