--- a/public/scss/create.scss
+++ b/public/scss/create.scss
@@ -76,3 +76,29 @@
 		margin-left: 275px;
 	}
 }
+
+@media only screen and (max-width: 1255px) {
+	.create-content {
+		.field-container {
+			width: 558px;
+			background-color: chartreuse;
+
+			.create-button {
+				margin: 150px auto;
+				margin-left: 70px;
+				margin-bottom: 100px;
+			}
+			.enter {
+				margin-top: 150px;
+			}
+			input {
+				width: 558px;
+			}
+		}
+	}
+	.input-holder {
+		.add {
+			left: 520px;
+		}
+	}
+}
